--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,12 @@ body {
 a {
   color: #00B7FF;
 }
+
+.navbar {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.btn {
+  background-color: hotpink;
+}
