--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,4 +14,13 @@
     <a href="" class="navbar nav-link" >My Collection</a>
     <a href="" class="navbar nav-link" >Comics</a>
     <a href="" class="navbar nav-link" >Artists</a>
+    <ul class="right">
+      <li>
+      <% if (user) { %>
+        <a href="/logout">Log Out</a>
+      <% } else { %>
+        <a href="/auth/google">Login with Google</a>
+      <% } %>
+      </li>
+    </ul>
   </nav>
