--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,13 +14,9 @@
     <a href="" class="navbar nav-link" >My Collection</a>
     <a href="" class="navbar nav-link" >Comics</a>
     <a href="" class="navbar nav-link" >Artists</a>
-    <ul class="right">
-      <li>
       <% if (user) { %>
-        <a href="/logout">Log Out</a>
+        <a class="oauth_login" href="/logout">Log Out</a>
       <% } else { %>
-        <a href="/auth/google">Login with Google</a>
+        <a class="oauth_login" href="/auth/google">Login with Google</a>
       <% } %>
-      </li>
-    </ul>
   </nav>
