Add user index and navbar func; last commit before book route

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/header') %> 
 
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>Welcome to <%= title %>, login above buddy!</p>
 
 <%- include('./partials/footer') %> 
