--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,13 +6,26 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel='stylesheet' href='/stylesheets/style.css' />
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  
   <title>Comic Weaver</title>
 </head>
+
 <body>
   <nav class="navbar navbar-dark bg-dark">
     <% if (user) { %>
-        <a href="" class="navbar nav-link" >My Collection</a>
-        <a href="" class="navbar nav-link" >Comics</a>
+        <a href="#" class="navbar nav-link" >My Collection</a>
+        <div class="dropdown show">
+          <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Comics
+          </a>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a href="/comics" class="dropdown-item">All Comics</a>
+            <a href="#" class="dropdown-item">Add Comics</a>
+          </div>
+        </div>
         <a href="" class="navbar nav-link" >Artists</a>
         <a class="oauth_login" href="/logout">Log Out</a>
       <% } else { %>
