Add/route create view, styling and comic Schema update

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  display: flex;
 }
 
 a {
@@ -13,5 +14,11 @@ a {
 }
 
 .btn {
-  background-color: greenyellow;
+  color:black;
+}
+
+@media (min-width: 43em){
+  body {
+    display: grid;
+  }
 }
