--- a/views/comics/index.ejs
+++ b/views/comics/index.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %> 
 
     <h1><%= title %></h1>
-    <p>Aite bet</p>
+    <p>💥Aite bet here is where all comics will be displayed💥</p>
 
 <%- include('../partials/footer') %> 
