--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,7 +23,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
             <a href="/comics" class="dropdown-item">All Comics</a>
-            <a href="#" class="dropdown-item">Add Comics</a>
+            <a href="/comics/new" class="dropdown-item">Add Comics</a>
           </div>
         </div>
         <a href="" class="navbar nav-link" >Artists</a>
