--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,6 +1,7 @@
 <%- include('../partials/header') %> 
-
+<div id="main">
     <h1><%= title %></h1>
     <p>SUCCESSFULLY LOGGED IN</p>
+</div>
 
 <%- include('../partials/footer') %> 
