--- a/views/comics/new.ejs
+++ b/views/comics/new.ejs
@@ -9,9 +9,9 @@
     <br><label>-Issue/Trade #-</label>
     <input type="text" name="issueNum">
     <br><label>-Writer-</label> <!-- Datalist should have all writers that are currently in db -->
-    <input type="text" name="writers">
+    <!-- <input type="text" name="writers"> -->
     <br><label>-Artist-</label> <!-- Datalist should have all atists that are currently in db -->
-    <input type="text" name="artists">
+    <!-- <input type="text" name="artists"> -->
     <!-- Also might still need checkboxes for isowned and read? -->
     <input type="submit" value="Add Comic">
     </form>
