Add comic show route, UI

--- a/views/comics/index.ejs
+++ b/views/comics/index.ejs
@@ -5,7 +5,10 @@
     </div>
     <div>
         <% comics.forEach( c => { %>
-            <p><%= c.title %></p> 
+        <%= c.title %>
+            <a href="comics/<%=c._id%>">
+                click
+            </a></p> 
         <% }); %>      
     </div>
 
