--- a/views/comics/show.ejs
+++ b/views/comics/show.ejs
@@ -2,6 +2,12 @@
     <div id="main">
         <h1><%= title %></h1>
         <p>SHOW IT TO ME!👀</p>
+        <p>title:<%= comic.title %></p>
+        <p>volume:<%= comic.issueNum %></p>
+        <p>writer:<%= comic.writers %></p>
+        <p>artist:<%= comic.artists %></p>
+        <p>read:<%= comic.isOwned %></p>
+        <p>owned:<%= comic.isRead %></p>
     </div>
   
 
