Update UI to display artists and writers as they persist on NEW page

--- a/views/artists/new.ejs
+++ b/views/artists/new.ejs
@@ -8,6 +8,9 @@
         <input type="text" name="name">
     <input type="submit" value="Add Artist">
     </form>
-
-
+        <% artists.forEach(a => { %> 
+            <ul> 
+                <li><%= a.name %> </li>
+            </ul>
+    <% }); %> 
 <%- include('../partials/footer') %> 
