--- a/views/comics/new.ejs
+++ b/views/comics/new.ejs
@@ -8,17 +8,17 @@
     <input type="text" name="title">
     <br><label for="issueNum">-Issue/Trade #-</label>
     <input type="text" name="issueNum">
+
     <br><label for="writers">-Writer-</label> <!-- Datalist should have all writers that are currently in db -->
-        <input list="writers-names" name="writers" autocomplete="off">
-        <datalist id="writers-names">
+        <select name="writers">
+            <option disabled selected value style="display:none">choose from list or add above</option>
             <%- writers.map(w => `<option value="${w.name}">${w.name}</option>`).join('') %>
-        </datalist>
-        <!-- editing down here for artists -->
-    <br><label for="artists">-Artist-</label> <!-- Datalist should have all artists that are currently in db -->
-        <input list="artists-names" name="artists" autocomplete="off">
-        <datalist id="artists-names">
+        </select>
+        <br><label for="artists">-Artist-</label> <!-- Datalist should have all atists that are currently in db -->
+        <select name="artists">
+            <option disabled selected value style="display:none">choose from list or add above</option>
             <%- artists.map(a => `<option value="${a.name}">${a.name}</option>`).join('') %>
-        </datalist>
+</select>
     <!-- Also might still need checkboxes for isowned and read? -->
     <input type="submit" value="Add Comic">
     </form>
