Fix author and writer population, model refactor, and more...

--- a/views/comics/new.ejs
+++ b/views/comics/new.ejs
@@ -12,13 +12,13 @@
     <br><label for="writers">-Writer-</label> <!-- Datalist should have all writers that are currently in db -->
         <select name="writers">
             <option disabled selected value style="display:none">choose from list or add above</option>
-            <%- writers.map(w => `<option value="${w.name}">${w.name}</option>`).join('') %>
+            <%- writers.map(w => `<option value="${w._id}">${w.name}</option>`).join('') %>
         </select>
         <br><label for="artists">-Artist-</label> <!-- Datalist should have all atists that are currently in db -->
         <select name="artists">
             <option disabled selected value style="display:none">choose from list or add above</option>
-            <%- artists.map(a => `<option value="${a.name}">${a.name}</option>`).join('') %>
-</select>
+            <%- artists.map(a => `<option value="${a._id}">${a.name}</option>`).join('') %>
+        </select>
     <!-- Also might still need checkboxes for isowned and read? -->
     <input type="submit" value="Add Comic">
     </form>
