--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,9 +16,9 @@
 <body>
   <nav class="navbar navbar-dark bg-dark">
     <% if (user) { %>
-        <a href="#" class="navbar nav-link" >My Collection</a>
+        <a href="/" class="navbar nav-link" >My Collection</a>
         <div class="dropdown show">
-          <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Comics
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -27,7 +27,7 @@
           </div>
         </div>
         <div class="dropdown show">
-          <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Creative Team
           </a>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
