Init comic/user relationship

--- a/views/comics/show.ejs
+++ b/views/comics/show.ejs
@@ -20,7 +20,7 @@
         <p>read:<%= comic.isRead %></p>
     </div>
 <a href="" class="btn btn-outline-light">Update creative team</a>
-<form action="<%=comic._id%>" method = "POST">
+<form action="<%=comic._id%>/weave" method = "POST">
     <button type="submit" class="btn btn-outline-primary">Add to my collection</button>
 </form>
 
