--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
 <body>
   <nav class="navbar navbar-dark bg-dark">
     <% if (user) { %>
-        <a href="/weaves" class="navbar nav-link" >My Collection</a>
+        <a href="/comics/weaves" class="navbar nav-link" >My Collection</a>
         <div class="dropdown show">
           <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Comics
