--- a/views/comics/edit.ejs
+++ b/views/comics/edit.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %> 
     <div id="main">
         <h1><%= title %></h1>
-        <p>🥞Making pancakes... I mean comics! Definitely making comics and NOT pancakes🥞</p>
+        <p>✏️Here's the edit page✏️</p>
     </div>
     <form action="/comics" method="POST" class="new-form"> <!-- Action needs attention -->
     <label for="title">-Title-</label>
