--- a/views/comics/index.ejs
+++ b/views/comics/index.ejs
@@ -5,10 +5,14 @@
     </div>
     <div>
         <% comics.forEach( c => { %>
-        <%= c.title %>
+        <div><%= c.title %>
             <a href="comics/<%=c._id%>">
-                click
-            </a></p> 
+                detail view 
+            </a>
+            <form style="display: inline;" action="/comics/<%=c._id%>?_method=DELETE " method="POST"> <!-- finna be a delete action here -->
+                <button class="btn btn-danger btn-sm">Delete Comic</button>
+                </form>
+        </div>
         <% }); %>      
     </div>
 
