--- a/views/writers/new.ejs
+++ b/views/writers/new.ejs
@@ -5,7 +5,7 @@
     </div>
     <form action="/writers" method="POST" class="new-form"> <!-- Action needs attention -->
     <label for="name">Writer's Name:</label> 
-    <input type="text" name="name">
+    <input type="text" name="name" required>
     <input type="submit" value="Add Writer">
     </form>
     <% writers.forEach(w => { %> 
