--- a/views/comics/show.ejs
+++ b/views/comics/show.ejs
@@ -16,22 +16,19 @@
                <%= a.name %>
            <% }) %> </p>
         <!-- broken query below here DO FIX-->
-        <% if(comic.addedBy._id !== user.id) { %>
-            <p>collected by:
-                <% comic.addedBy.forEach(usr => {%>
-                    <%= usr.name %> 
-                <% }) %>      
+        <% if(!comic.addedBy._id.equals(user._id)) { %>
+            <p>collected by: <%= comic.addedBy.name %>      
         <% } %> 
         <p>read:<%= comic.isRead %></p>
     </div>
-<a href="<%=comic._id%>/edit" class="btn btn-outline-light btn-sm">Edit Comic</a>
+    
+    <% if(comic.addedBy._id.equals(user._id)) { %>
+        <a href="<%=comic._id%>/edit" class="btn btn-outline-light btn-sm">Edit Comic</a>
+        
+        <form style="display: inline;" action="comics/<%=comic._id%>?_method=DELETE " method="POST"> <!-- finna be a delete action here -->
+            <button class="btn btn-danger btn-sm">Delete Comic</button>
+        </form>
 
-<form action="<%=comic._id%>/weave" method = "POST">
-    <button type="submit" class="btn btn-outline-primary btn-sm">Add to my collection</button>
-</form>
-
-<form style="display: inline;" action="comics/<%=comic._id%>?_method=DELETE " method="POST"> <!-- finna be a delete action here -->
-    <button class="btn btn-danger btn-sm">Delete Comic</button>
-</form>
+    <% } %> 
 
 <%- include('../partials/footer') %> 
