--- a/views/artists/new.ejs
+++ b/views/artists/new.ejs
@@ -1,16 +1,16 @@
 <%- include('../partials/header') %> 
-    <div id="main">
+    <div id="title">
         <h1><%= title %></h1>
-        <p>This is where new artists are made🖌</p>
     </div>
     <form action="/artists" method="POST" class="new-form"> <!-- Action needs attention -->
         <label for="name">Artist's Name:</label> 
         <input type="text" name="name" required>
-    <input type="submit" value="Add Artist">
+        <input type="submit" value="Add Artist">
     </form>
+    
+    <div class ="artist-list">
         <% artists.forEach(a => { %> 
-            <ul> 
-                <li><%= a.name %> </li>
-            </ul>
-    <% }); %> 
+                <p><%= a.name %></p>
+        <% }); %> 
+    </div>
 <%- include('../partials/footer') %> 
