--- a/views/comics/edit.ejs
+++ b/views/comics/edit.ejs
@@ -1,9 +1,8 @@
 <%- include('../partials/header') %> 
-    <div id="main">
+    <div id="title">
         <h1><%= comic.title %></h1>
-        <p>✏️Here's the edit page✏️</p>
     </div>
-    <form action="/comics/<%=comic._id%>?_method=PUT " method="POST" class="edit-form"> <!-- Action needs attention -->
+    <form action="/comics/<%=comic._id%>?_method=PUT " method="POST" class="edit-form">
     <label for="title">-Title-</label>
     <input type="text" name="title" value="<%= comic.title %> " required>
     <br><label for="issueNum">-Issue/Trade #-</label>
