--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,29 +14,31 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-dark bg-dark">
-    <% if (user) { %>
-        <a href="" class="navbar nav-link" >My Collection</a>
-        <div class="dropdown show">
-          <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Comics
-          </a>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a href="/comics" class="dropdown-item">All Comics</a>
-            <a href="/comics/new" class="dropdown-item">Add Comics</a>
-          </div>
-        </div>
-        <div class="dropdown show">
-          <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Creative Team
-          </a>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+
+    <nav class="navbar navbar-light" style=background-color:#e6a607;">  
+      <% if (user) { %>
+        <ul class="nav nav-pills">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Comics</a>
+            <div class="dropdown-menu">
+              <a href="/comics" class="dropdown-item">All Comics</a>
+              <a href="/comics/new" class="dropdown-item">Add Comic</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Creative Team</a>
+            <div class="dropdown-menu">
               <a href="/writers/new" class="dropdown-item">Add Writers</a>
               <a href="/artists/new" class="dropdown-item">Add Artists</a>
             </div>
-        </div>
-        <a class="oauth_login" href="/logout">Log Out</a>
-      <% } else { %>
-        <a class="oauth_login" href="/auth/google">Login with Google</a>
-    <% } %>
+          </li>
+          <li class="nav-item">
+            <a href="/logout" class="oauth_login nav-link">Log Out</a>
+          </li>
+          <% } else { %>
+            <li class="nav-item" id="login-text">
+              <a class="oauth_login nav-link" href="/auth/google">Login with Google</a>
+            </li>
+          <% } %>
+      </ul>
   </nav>
