--- a/views/writers/new.ejs
+++ b/views/writers/new.ejs
@@ -3,11 +3,12 @@
         <h1><%= title %></h1>
     </div>
     <form action="/writers" method="POST" class="new-form"> <!-- Action needs attention -->
+        <div class="form-group">
         <label for="name">Writer's Name:</label> 
         <input type="text" name="name" required>
         <input type="submit" value="Add Writer">
+    </div>
     </form>
-
     <div class="artist-list">
         <% writers.forEach(w => { %> 
                 <p><%= w.name %> </p>
