Update README with screenshot

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/header') %> 
    
-    <div id="main"> 
+    <div id="block"> 
         <h1><%= title %></h1>
-        <p>Welcome to <%= title %>, login above buddy!</p>
-
+        <p id="detail-link">Welcome to <%= title %>!</p>
+        </div>
 <%- include('./partials/footer') %> 
